Chapter 5 Notes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_101\bin\javadoc.exe
-author
-version
-nodeprecated
-private
-tag
pre:a:Precondition:
-tag
post:a:Postcondition:
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes
-d
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java
<---- end of javadoc command ---->
Loading source file C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java...
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:2: error: class, interface, or enum expected
public static boolean floatsAreEqual( double num 1, double num 2 )
              ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:10: error: class, interface, or enum expected
    final double EPSILON = 1e-14;
          ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:12: error: class, interface, or enum expected
    if( Math.abs( num1 - num2 ) < EPSILON )
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:25: error: class, interface, or enum expected
public static void stringExamples()
              ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:28: error: class, interface, or enum expected
    System.out.print( " enter two strings ");
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:29: error: class, interface, or enum expected
    Strint str1 = s.next();
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:30: error: class, interface, or enum expected
    String str2 = s.next();
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:39: error: class, interface, or enum expected
    if( str1 == str2 )
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:72: error: class, interface, or enum expected
    String firstStr = null; //assigning the null reference to firstStr
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:74: error: class, interface, or enum expected
    if(result < 0 )
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:77: error: class, interface, or enum expected
    {
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:81: error: class, interface, or enum expected
    }
    ^
C:\Users\jjlowe\Desktop\unit3DecisionsLoops-master\Chapter 5 Notes\Notes.java:85: error: class, interface, or enum expected
}
^
13 errors
